[gd_scene load_steps=3 format=3 uid="uid://dfc43h720fkwh"]

[ext_resource type="Script" path="res://path_enemy.gd" id="1_e7fci"]

[sub_resource type="Curve2D" id="Curve2D_ihao6"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 24, -2, 0, 0, 0, 0, -6, 224, -67.6545, 0.795936, 67.6545, -0.795936, 38, 338, 0, 0, 0, 0, 72, 222, 0, 0, 0, 0, 36, -4, 0, 0, 0, 0, 24, -2)
}
point_count = 6

[node name="Path Enemy" type="Node2D"]
script = ExtResource("1_e7fci")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_ihao6")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(24, -2)
rotation = 1.70277

[node name="ActiveTimer" type="Timer" parent="."]

[node name="SpawnInterval" type="Timer" parent="."]

[node name="DeactiveTimer" type="Timer" parent="."]
